--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Automat==0.5.0
 cffi==1.10.0
 click==6.7
 constantly==15.1.0
-cryptography==1.8.1
+cryptography>=1.3.4
 cssselect==1.0.1
 Flask==0.12.1
 Flask-WTF==0.14.2
